Weird player position on mobile fix

--- a/src/components/Player/Player.module.scss
+++ b/src/components/Player/Player.module.scss
@@ -69,6 +69,7 @@
     bottom: 50px;
     border-radius: 10px;
     padding: 0;
+    position: sticky;
 
     .player-song-details {
       flex: 2;
